내정보 디자인 수정

--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -37,154 +37,172 @@
             android:fontFamily="@font/m_gothic_extrabold"/>
 
     </RelativeLayout>
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@color/menubar"
         android:layout_below="@id/title_personal"/>
 
-    <LinearLayout
-        android:id="@+id/layout_name"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title_personal"
+        android:layout_marginTop="30dp"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_below="@id/title_personal"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="@string/name_str"
-            android:textSize="18sp"
-            android:fontFamily="@font/m_gothic_bold"/>
-        <TextView
-            android:id="@+id/tv_name"
+        android:layout_marginEnd="20dp">
+
+        <TableLayout
+            android:id="@+id/table"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="10dp"
-            android:textSize="18sp"
-            android:fontFamily="@font/m_gothic_normal"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/layout_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_below="@id/layout_name"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="@string/number_str"
-            android:textSize="18sp"
-            android:fontFamily="@font/m_gothic_bold"/>
-        <TextView
-            android:id="@+id/tv_number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="10dp"
-            android:textSize="18sp"
-            android:fontFamily="@font/m_gothic_normal"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/layout_phone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_below="@id/layout_number"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="@string/phone_str"
-            android:textSize="18sp"
-            android:fontFamily="@font/m_gothic_bold"/>
-        <TextView
-            android:id="@+id/tv_phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="10dp"
-            android:textSize="18sp"
-            android:fontFamily="@font/m_gothic_normal"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/layout_temper"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_below="@id/layout_phone"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="@string/temper_str"
-            android:textSize="18sp"
-            android:fontFamily="@font/m_gothic_bold"/>
-        <TextView
-            android:id="@+id/tv_temper"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="10dp"
-            android:textSize="18sp"
-            android:fontFamily="@font/m_gothic_normal"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/layout_destination"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_below="@id/layout_temper"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="@string/destination_str"
-            android:textSize="18sp"
-            android:fontFamily="@font/m_gothic_bold"/>
-        <TextView
-            android:id="@+id/tv_destination"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="10dp"
-            android:textSize="18sp"
-            android:fontFamily="@font/m_gothic_normal"/>
-    </LinearLayout>
-    <LinearLayout
-    android:id="@+id/layout_participation"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp"
-    android:layout_below="@id/layout_destination"
-    android:orientation="horizontal">
-    <TextView
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:text="@string/participate_str"
-        android:textSize="18sp"
-        android:fontFamily="@font/m_gothic_bold"/>
-    <TextView
-        android:id="@+id/tv_participation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginStart="10dp"
-        android:textSize="18sp"
-        android:fontFamily="@font/m_gothic_normal"/>
-</LinearLayout>
+            android:layout_centerHorizontal="true"
+            android:background="#000000"
+            android:paddingTop="2dp">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:background="#D8D8D8"
+                android:paddingBottom="0.5dp">
+                <TextView
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:gravity="center"
+                    android:text="@string/name_str"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/m_gothic_bold"
+                    android:background="#FFFFFF"/>
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="0.5dp"
+                    android:gravity="center"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/m_gothic_normal"
+                    android:background="#FFFFFF"/>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_alignStart="@+id/table"
+                android:background="#D8D8D8"
+                android:paddingBottom="0.5dp">
+
+                <TextView
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:background="#FFFFFF"
+                    android:fontFamily="@font/m_gothic_bold"
+                    android:gravity="center"
+                    android:text="@string/number_str"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/tv_number"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="0.5dp"
+                    android:background="#FFFFFF"
+                    android:fontFamily="@font/m_gothic_normal"
+                    android:gravity="center"
+                    android:textSize="16sp" />
+            </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:background="#D8D8D8"
+                android:paddingBottom="0.5dp">
+                <TextView
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:text="@string/participate_str"
+                    android:gravity="center"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/m_gothic_bold"
+                    android:background="#FFFFFF"/>
+                <TextView
+                    android:id="@+id/tv_participation"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center"
+                    android:layout_marginStart="0.5dp"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/m_gothic_normal"
+                    android:background="#FFFFFF"/>
+            </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:background="#D8D8D8"
+                android:paddingBottom="0.5dp">
+                <TextView
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:gravity="center"
+                    android:text="@string/phone_str"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/m_gothic_bold"
+                    android:background="#FFFFFF"/>
+                <TextView
+                    android:id="@+id/tv_phone"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center"
+                    android:layout_marginStart="0.5dp"
+                    android:textSize="16sp"
+
+                    android:fontFamily="@font/m_gothic_normal"
+                    android:background="#FFFFFF"/>
+            </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:background="#D8D8D8"
+                android:paddingBottom="0.5dp">
+                <TextView
+                    android:layout_width="120dp"
+                    android:layout_height="100dp"
+                    android:gravity="center"
+                    android:text="@string/temper_str"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/m_gothic_bold"
+                    android:background="#FFFFFF"/>
+                <TextView
+                    android:id="@+id/tv_temper"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center"
+                    android:layout_marginStart="0.5dp"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/m_gothic_normal"
+                    android:background="#FFFFFF"/>
+            </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:background="#D8D8D8"
+                android:paddingBottom="0.5dp">
+                <TextView
+                    android:layout_width="120dp"
+                    android:layout_height="100dp"
+                    android:text="@string/destination_str"
+                    android:gravity="center"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/m_gothic_bold"
+                    android:background="#FFFFFF"/>
+                <TextView
+                    android:id="@+id/tv_destination"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center"
+                    android:layout_marginStart="0.5dp"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/m_gothic_normal"
+                    android:background="#FFFFFF"/>
+            </TableRow>
+        </TableLayout>
+    </RelativeLayout>
 </RelativeLayout>
