--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -43,4 +43,317 @@
         android:background="@color/menubar"
         android:layout_below="@id/title_check" />
 
+    <RelativeLayout
+        android:id="@+id/layout_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/title_check"
+        android:layout_margin="20dp">
+
+        <RelativeLayout
+            android:id="@+id/layout_nowTime"
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_nowTime"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="5dp"
+                android:gravity="center_vertical"
+                android:layout_alignParentEnd="true"
+                android:text="test"
+                android:textSize="14sp"
+                android:fontFamily="@font/m_gothic_bold"/>
+            <TextView
+                android:id="@+id/tv_nowTimeTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:layout_marginStart="5dp"
+                android:layout_toStartOf="@id/tv_nowTime"
+                android:text="현재 시간 : "
+                android:textSize="14sp"
+                android:fontFamily="@font/m_gothic_normal"/>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_startTime"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_below="@id/layout_nowTime"
+            android:orientation="horizontal"
+            android:background="@drawable/tv_border_top">
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:layout_marginStart="5dp"
+                android:text="관람 시작"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_normal"
+                android:background="@drawable/tv_border_title"/>
+            <TextView
+                android:id="@+id/tv_startTime"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="end|center_vertical"
+                android:text="test"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_bold"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/layout_endTime"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_below="@id/layout_startTime"
+            android:orientation="horizontal"
+            android:background="@drawable/tv_border_center">
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:layout_marginStart="5dp"
+                android:text="관람 종료 예정"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_normal"
+                android:background="@drawable/tv_border_title"/>
+            <TextView
+                android:id="@+id/tv_endTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="end"
+                android:text="test"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_bold"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/layout_elapsedTime"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_below="@id/layout_endTime"
+            android:orientation="horizontal"
+            android:background="@drawable/tv_border_bottom">
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:layout_marginStart="5dp"
+                android:text="경과 시간"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_normal"
+                android:background="@drawable/tv_border_title"/>
+            <TextView
+                android:id="@+id/tv_elapsedTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="end"
+                android:text="test"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_bold"/>
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/layout_exhibition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/layout_time"
+        android:layout_centerHorizontal="true">
+
+        <LinearLayout
+            android:id="@+id/layout_ex_1"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:orientation="horizontal"
+            android:background="@drawable/tv_border_top">
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:gravity="center|center_vertical"
+                android:text="1 전시관"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_normal"
+                android:background="@drawable/tv_border_title"/>
+            <ImageView
+                android:id="@+id/iv_ex_1"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_gravity="center_vertical"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_bold"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/layout_ex_2"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_toEndOf="@id/layout_ex_1"
+            android:layout_marginStart="5dp"
+            android:orientation="horizontal"
+            android:background="@drawable/tv_border_top">
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:gravity="center|center_vertical"
+                android:text="2 전시관"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_normal"
+                android:background="@drawable/tv_border_title"/>
+            <ImageView
+                android:id="@+id/iv_ex_2"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_gravity="center_vertical"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_bold"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/layout_ex_3"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_below="@id/layout_ex_1"
+            android:orientation="horizontal"
+            android:background="@drawable/tv_border_center">
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:gravity="center|center_vertical"
+                android:text="3 전시관"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_normal"
+                android:background="@drawable/tv_border_title"/>
+            <ImageView
+                android:id="@+id/iv_ex_3"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_gravity="center_vertical"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_bold"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/layout_ex_4"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_below="@id/layout_ex_2"
+            android:layout_toEndOf="@id/layout_ex_3"
+            android:layout_marginStart="5dp"
+            android:orientation="horizontal"
+            android:background="@drawable/tv_border_center">
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:gravity="center|center_vertical"
+                android:text="4 전시관"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_normal"
+                android:background="@drawable/tv_border_title"/>
+            <ImageView
+                android:id="@+id/iv_ex_4"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_gravity="center_vertical"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_bold"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/layout_ex_5"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_below="@id/layout_ex_3"
+            android:orientation="horizontal"
+            android:background="@drawable/tv_border_bottom">
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:gravity="center|center_vertical"
+                android:text="5 전시관"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_normal"
+                android:background="@drawable/tv_border_title"/>
+            <ImageView
+                android:id="@+id/iv_ex_5"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_gravity="center_vertical"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_bold"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/layout_ex_6"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_below="@id/layout_ex_4"
+            android:layout_toEndOf="@id/layout_ex_5"
+            android:layout_marginStart="5dp"
+            android:orientation="horizontal"
+            android:background="@drawable/tv_border_bottom">
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:gravity="center|center_vertical"
+                android:text="6 전시관"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_normal"
+                android:background="@drawable/tv_border_title"/>
+            <ImageView
+                android:id="@+id/iv_ex_6"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_gravity="center_vertical"
+                android:textSize="16sp"
+                android:fontFamily="@font/m_gothic_bold"/>
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/bt_toMap"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_below="@id/layout_exhibition"
+        android:onClick="onClick"
+        android:text="지도 열기"
+        android:textSize="16sp"
+        android:fontFamily="@font/m_gothic_normal"
+        android:background="@drawable/custom_button"
+        style="?android:attr/borderlessButtonStyle"/>
+
+    <Button
+        android:id="@+id/bt_finish"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_below="@id/bt_toMap"
+        android:onClick="onClick"
+        android:text="관람 종료하기"
+        android:textSize="16sp"
+        android:fontFamily="@font/m_gothic_normal"
+        android:background="@drawable/custom_button"
+        style="?android:attr/borderlessButtonStyle" />
 </RelativeLayout>
