--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="timeColor">#78468c</color>
     <color name="applyButton">#91CFFF</color>
     <color name="cancelButton">#FAC9C6</color>
+    <color name="red">#E21919</color>
 </resources>
