개인정보수집동의 팝업 추가, 일부 레이아웃 수정

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#1F4FA2</color>
     <color name="transparent">#00ff0000</color>
     <color name="hyperlink">#2196F3</color>
     <color name="menubar">#0E4B69</color>
