--- a/app/src/main/res/drawable/custom_edittext.xml
+++ b/app/src/main/res/drawable/custom_edittext.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed="true" android:state_enabled="true">
         <shape>
             <gradient
-                android:startColor="#ffffff" android:endColor="#ECECEC"
+                android:startColor="#ECECEC" android:endColor="#ffffff"
                 android:angle="270" />
 
             <stroke
@@ -21,11 +21,11 @@
     <item android:state_focused="true" android:state_enabled="true">
         <shape>
             <gradient
-                android:startColor="#ffffff" android:endColor="#ECECEC"
+                android:startColor="#ECECEC" android:endColor="#ffffff"
                 android:angle="270" />
 
             <stroke
-                android:width="1.5dip" android:color="#555555"/>
+                android:width="1.5dip" android:color="@color/colorAccent"/>
 
             <corners android:radius="5dip"/>
 
@@ -54,7 +54,7 @@
     <item android:state_enabled="true">
         <shape>
             <gradient
-                android:startColor="#ffffff" android:endColor="#ECECEC"
+                android:startColor="#ECECEC" android:endColor="#ffffff"
                 android:angle="270" />
 
             <stroke
