--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,39 +73,39 @@
             android:textSize="14sp"
             android:textColor="@color/unfocusText"
             android:fontFamily="@font/m_gothic_bold"
-            android:background="@drawable/custom_button"
+            android:background="@drawable/custom_main_button"
             style="?android:attr/borderlessButtonStyle"/>
 
         <Button
             android:id="@+id/bt_certificate"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="120dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             android:layout_marginBottom="15dp"
             android:onClick="onClick"
             android:text="@string/certificate_str"
             android:textSize="18sp"
             android:textColor="@color/unfocusText"
             android:fontFamily="@font/m_gothic_bold"
-            android:background="@drawable/custom_button"
+            android:background="@drawable/custom_main_button"
             style="?android:attr/borderlessButtonStyle"/>
 
         <Button
             android:id="@+id/bt_registration"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="120dp"
             android:layout_above="@+id/bt_certificate"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="20dp"
             android:onClick="onClick"
             android:text="@string/registration_str"
             android:textSize="18sp"
             android:textColor="@color/unfocusText"
             android:fontFamily="@font/m_gothic_bold"
-            android:background="@drawable/custom_button"
+            android:background="@drawable/custom_main_button"
             style="?android:attr/borderlessButtonStyle"/>
 
     </RelativeLayout>
